# snowshooter

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml  format.yml
assets/maps/: map_background.csv  map_details.csv  map_obstacles.csv
assets/misc/: map.tmx  vx-winter-tileset.tsx
cmake/: FindSDL2_net.cmake
src/: AudioManager.cpp  AudioManager.h  Client.cpp  Client.h  Constants.h  EventListener.cpp  EventListener.h  Font.cpp  Font.h  FontManager.cpp  FontManager.h  Game.cpp  Game.h  GameManager.cpp  GameManager.h  GameObject.cpp  GameObject.h  Input.cpp  Input.h  MenuScene.cpp  MenuScene.h  ResourceManager.h  SDLAudioManager.cpp  SDLAudioManager.h  SDLError.h  Scene.cpp  Scene.h  SceneMachine.cpp  SceneMachine.h  Server.cpp  Server.h  SnowShooterError.h  Texture.cpp  Texture.h  TextureManager.cpp  TextureManager.h  Tileset.cpp  Tileset.h  TimePool.cpp  TimePool.h  (+2 more)
